--- a/src/components/Menu/style.module.css
+++ b/src/components/Menu/style.module.css
@@ -4,7 +4,7 @@
   right: 0;
   height: calc( 100vh - 120px );
   width: calc( 100vw - 120px );
-  background: #fafafa;
+  background: rgba(0, 0, 0, .5);
 }
 
 .menuContainer.active > .overlay {
